_cache/v0.20/opencv/specs.md
---
title: "opencv"
layout: cache
categories: [package, v0.20]
meta: {"versions": ["4.6.0"], "compilers": ["gcc@=11.3.0"], "oss": ["ubuntu22.04"], "platforms": ["linux"], "targets": ["x86_64_v3"], "stacks": ["ml-linux-x86_64-cpu", "ml-linux-x86_64-cuda", "ml-linux-x86_64-rocm"], "num_specs": 4, "num_specs_by_stack": {"ml-linux-x86_64-cpu": 2, "ml-linux-x86_64-rocm": 2, "ml-linux-x86_64-cuda": 2}}
spec_details: [{"hash": "iupihdnr6mhyshm2yp24aojslxycvduk", "compiler": "gcc@=11.3.0", "versions": ["4.6.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "+highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "+imgcodecs", "+imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "~python3", "~python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["ml-linux-x86_64-cpu", "ml-linux-x86_64-rocm"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.3.0/opencv-4.6.0/linux-ubuntu22.04-x86_64_v3-gcc-11.3.0-opencv-4.6.0-iupihdnr6mhyshm2yp24aojslxycvduk.spack"}, {"hash": "yqd2aosvq65uymta75hbdzhp4szwrciu", "compiler": "gcc@=11.3.0", "versions": ["4.6.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "+cuda", "cuda_arch=80", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "+cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "+highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "+imgcodecs", "+imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "~python3", "~python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["ml-linux-x86_64-cuda"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.3.0/opencv-4.6.0/linux-ubuntu22.04-x86_64_v3-gcc-11.3.0-opencv-4.6.0-yqd2aosvq65uymta75hbdzhp4szwrciu.spack"}, {"hash": "nmjxnw5awfmkpf4lxe6ds77tvqyhg2mg", "compiler": "gcc@=11.3.0", "versions": ["4.6.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "~cuda", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "~cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "+highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "+imgcodecs", "+imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "~python3", "~python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["ml-linux-x86_64-cpu", "ml-linux-x86_64-rocm"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.3.0/opencv-4.6.0/linux-ubuntu22.04-x86_64_v3-gcc-11.3.0-opencv-4.6.0-nmjxnw5awfmkpf4lxe6ds77tvqyhg2mg.spack"}, {"hash": "c3msjvxp4dcbnrfdvmnidm4l6vcza7ho", "compiler": "gcc@=11.3.0", "versions": ["4.6.0"], "os": "ubuntu22.04", "platform": "linux", "target": "x86_64_v3", "variants": ["~1394", "~ade", "~alphamat", "~android_mediandk", "~android_native_camera", "~annotation", "~aruco", "~avfoundation", "~barcode", "~bgsegm", "~bioinspired", "build_system=cmake", "build_type=Release", "~calib3d", "~cap_ios", "~carotene", "~ccalib", "~clp", "+contrib", "~cpufeatures", "~createsamples", "~cublas", "+cuda", "cuda_arch=80", "~cudaarithm", "~cudabgsegm", "~cudacodec", "~cudafeatures2d", "~cudafilters", "~cudaimgproc", "~cudalegacy", "~cudaobjdetect", "~cudaoptflow", "~cudastereo", "~cudawarping", "+cudev", "~cudnn", "~cufft", "~cvv", "~datasets", "~directx", "~dnn", "~dnn_objdetect", "~dnn_superres", "~dpm", "~dshow", "~eigen", "~face", "~fast-math", "~features2d", "~ffmpeg", "~flann", "~freetype", "~fuzzy", "~gapi", "~gdal", "generator=make", "~gtk", "~hdf", "~hfs", "+highgui", "~hpx", "~img_hash", "~imgcodec_hdr", "~imgcodec_pfm", "~imgcodec_pxm", "~imgcodec_sunraster", "+imgcodecs", "+imgproc", "~intensity_transform", "~interactive-calibration", "~ipo", "~ipp", "~itt", "~jasper", "~java", "~java_bindings_generator", "~jpeg", "~lapack", "~line_descriptor", "~matlab", "~mcc", "~ml", "~model-diagnostics", "~msmf", "~msmf_dxva", "~nonfree", "~objc", "~objc_bindings_generator", "~objdetect", "~onnx", "~opencl", "~opencl_d3d11_nv", "~openexr", "~opengl", "~openjpeg", "~openmp", "~optflow", "patches=2aea289,3cab451", "~phase_unwrapping", "~photo", "~plaidml", "~plot", "~png", "~powerpc", "~protobuf", "~pthreads_pf", "~python3", "~python_bindings_generator", "~python_tests", "~qt", "~quality", "~quirc", "~rapid", "~reg", "~rgbd", "~saliency", "~sfm", "~shape", "+shared", "~stereo", "~stitching", "~structured_light", "~superres", "~surface_matching", "~tbb", "~tengine", "~tesseract", "~text", "~tiff", "~tracking", "~traincascade", "~ts", "~v4l", "~version", "~video", "~videoio", "~videostab", "~visualisation", "~viz", "~vtk", "~vulcan", "~webp", "~wechat_qrcode", "~win32ui", "~world", "~xfeatures2d", "~ximgproc", "~xobjdetect", "~xphoto"], "stacks": ["ml-linux-x86_64-cuda"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.20/build_cache/linux-ubuntu22.04-x86_64_v3/gcc-11.3.0/opencv-4.6.0/linux-ubuntu22.04-x86_64_v3-gcc-11.3.0-opencv-4.6.0-c3msjvxp4dcbnrfdvmnidm4l6vcza7ho.spack"}]
---